package seedu.coinflip.utils.command;

import seedu.coinflip.utils.exceptions.CoinflipException;
import seedu.coinflip.utils.logger.CoinflipLogger;
import seedu.coinflip.utils.printer.Printer;
import seedu.coinflip.utils.storage.Storage;
import seedu.coinflip.utils.userdata.UserData;

/**
 * Helper class for change command logic:
 * changing bet amount and saving user data.
 */
public class ChangeCommand extends Command {

    private static final Integer NUMBER_OF_WORDS = 2;
    private final String[] words;
    private final Storage storage;
    private final UserData userData;

    //@@author timothyloh0523

    /**
     * Constructs ChangeCommand object.
     *
     * @param words    List of words in user command
     * @param userData UserData object to modify and access
     * @param storage  Storage helper to be used
     */
    public ChangeCommand(String[] words, UserData userData, Storage storage) {
        this.words = words;
        this.userData = userData;
        this.storage = storage;
    }

    //@@author timothyloh0523

    /**
     * Executes change command logic: changing bet amount and then saving user data.
     *
     * @throws CoinflipException if command format or bet amount is invalid
     */
    @Override
    public void execute() throws CoinflipException {
        CoinflipLogger.info("Executing change command");
        this.change();
        storage.saveData(userData);
        CoinflipLogger.info("Finished executing change command");
    }

    //@@author OliverQiL

    /**
     * Changes bet amount based on user input.
     *
     * @throws CoinflipException if command format or bet amount is invalid
     */
    public void change() throws CoinflipException {

        checkNumberOfWords(this.words);
        checkNumerical(this.words[1]);
        checkCanBeInteger(this.words[1]);

        Integer betAmount = Integer.parseInt(this.words[1]);

        checkNonNegative(betAmount);
        checkWithinBalance(betAmount, userData.balance);

        userData.betAmount = betAmount;
        Printer.printBetAmount(userData.betAmount);
    }

    //@@author OliverQiL
    private static void checkNumberOfWords(String[] words) throws CoinflipException {
        if (words.length != NUMBER_OF_WORDS) {
            CoinflipLogger.warning("Invalid command format");
            throw new CoinflipException(CoinflipException.CHANGE_INVALID_FORMAT);
        }
    }

    //@@author OliverQiL
    private static void checkNumerical(String input) throws CoinflipException {
        if (!input.matches("[0-9]+")) {
            CoinflipLogger.warning("Invalid bet amount: non-numerical");
            throw new CoinflipException(CoinflipException.CHANGE_BET_AMOUNT_INVALID);
        }
    }

    //@@author HTY2003
    private static void checkCanBeInteger(String input) throws CoinflipException {
        if (input.length() > 9) {
            CoinflipLogger.warning("Invalid bet amount: number too long");
            throw new CoinflipException(CoinflipException.CHANGE_BET_AMOUNT_TOO_LARGE);
        }
    }

    //@@author OliverQiL
    private static void checkNonNegative(Integer betAmount) throws CoinflipException {
        if (betAmount < 0) {
            CoinflipLogger.warning("Invalid bet amount: negative");
            throw new CoinflipException(CoinflipException.CHANGE_BET_AMOUNT_INVALID);
        }
    }

    //@@author OliverQiL
    private static void checkWithinBalance(Integer betAmount, Integer balance) throws CoinflipException {
        if (betAmount > balance) {
            CoinflipLogger.warning("Invalid bet amount: bet amount exceeds balance");
            throw new CoinflipException(CoinflipException.CHANGE_BET_AMOUNT_EXCEEDS_BALANCE);
        }
    }
}
